# AgentPay

./: .dockerignore  .editorconfig  .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  SIMULATION_REPORT_2.md  docker-compose.yml  nginx.conf  pyproject.toml  railway.toml
.github/: FUNDING.yml  dependabot.yml
blog/: agentpay-building-payment-layer-for-autonomous-agents.md  agentpay-deep-dive-how-autonomous-agents-pay-each-other.md
contracts/: foundry.toml
diagrams/: e2e-code-flow.excalidraw  erc8004-identity-flow.excalidraw  htlc-routing.excalidraw  ipfs-storage-flow.excalidraw  module-architecture.excalidraw  negotiation-flow.excalidraw  payment-flow.excalidraw  receipt-chain.excalidraw  settlement-flow.excalidraw  state-machine.excalidraw  system-architecture.excalidraw  trust-architecture.excalidraw  wire-protocol.excalidraw
docs/: ARCHITECTURE.md  ARIA-PROPOSAL.md  COMMANDS.md  CONTRIBUTING.md  DEMO-WALKTHROUGH.md  ECOSYSTEM-ALIGNMENT.md  PITCH.md  PRESENTATION-OUTLINE.md  VIDEO-SCRIPT.md  payment-failure-analysis.md
docs-site/: Gemfile  _config.yml  architecture.md  blog.md  commands.md  contributing.md  ecosystem.md  index.md  scripts.md
examples/: basic_payment.py  multi_agent_mesh.py  websocket_client.py
frontend/: .env.local.example  Dockerfile  eslint.config.mjs  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml
scripts/: README.md  agent_demo.sh  demo.sh  deploy_local.sh  dev.sh  live_test.sh  video_demo.sh
tests/: conftest.py  test_algorand.py  test_api.py  test_api_edge_cases.py  test_channel.py  test_channel_edge_cases.py  test_coordinator_behavior.py  test_discovery.py  test_disputes.py  test_eip191.py  test_erc8004.py  test_errors.py  test_executor.py  test_filecoin.py  test_gateway.py  test_node.py  (+25 more)
(+128 files in other folders)
