[project]
name = "agentic-payments"
version = "0.1.0"
description = "P2P agentic payments over libp2p"
requires-python = ">=3.12"
license = "MIT"
authors = [{ name = "Yash K. Saini", email = "yashksaini.coder@gmail.com" }]
readme = "README.md"
keywords = [
    "agents",
    "payments",
    "libp2p",
    "micropayments",
    "p2p",
    "ethereum",
    "filecoin",
    "algorand",
    "ai-agents",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Networking",
    "Typing :: Typed",
]

dependencies = [
    "libp2p>=0.6.0",
    "web3>=7.0",
    "eth-account>=0.13",
    "msgpack>=1.0",
    "pydantic-settings>=2.0",
    "typer>=0.12",
    "structlog>=24.0",
    "quart-trio>=0.11",
    "hypercorn[trio]>=0.17",
    "asyncpg>=0.30",
    "databases[asyncpg]>=0.9",
    "py-algorand-sdk>=2.6",
    "pynacl>=1.5",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-trio>=0.8",
    "ruff>=0.5",
    "mypy>=1.10",
]

[project.scripts]
agentpay = "agentic_payments.cli:app"

[project.urls]
Homepage = "https://github.com/yashksaini-coder/AgentPay"
Repository = "https://github.com/yashksaini-coder/AgentPay"
Documentation = "https://yashksaini-coder.github.io/AgentPay/"
Issues = "https://github.com/yashksaini-coder/AgentPay/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agentic_payments"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
trio_mode = true
testpaths = ["tests"]
